Move styles to prevent webkit box-shadow flicker

--- a/src/scss/flipping_icons.scss
+++ b/src/scss/flipping_icons.scss
@@ -4,6 +4,7 @@
     margin-right: auto;
     width: 150px;
     margin-bottom: 2.5%;
+    filter: drop-shadow(5px 5px 5px #000);
 }
 
 .icon-container {
